[tool.poetry]
name = "groundingdino"
version = "0.1.0"
description = ""
authors = ["Richard Brown <richard.brown@synthesia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.0"
torchvision = "^0.16"
transformers = "^4"
addict = "^2.4"
yapf = "^0.40"
timm = "^0.9"
numpy = "^1.26"
opencv-python = "^4.8"
supervision = "0.6"
pycocotools = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
